Lunchproject/cicd/k8s/yml/frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: lanthir-client-svc
  labels:
    app: lanthir-client
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: http
  selector:
    app: lanthir-client
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lanthir-client-deploy
  labels:
    app: lanthir-client
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lanthir-client
  minReadySeconds: 60
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: lanthir-client
    spec:
      containers:
        - name: lanthir-client
          imagePullPolicy: Always
          image: lanthir-client:latest
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 5
      imagePullSecrets:
        - name: academy-28ee1257-docker-registry
