Lunchproject/cicd/k8s/yml/services.yml
apiVersion: v1
kind: Service
metadata:
  name: lanthir-services-svc
  labels:
    app: lanthir-services
spec:
  type: ClusterIP
  ports:
    - port: 8080
      name: http
  selector:
    app: lanthir-services
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lanthir-services-deploy
  labels:
    app: lanthir-services
spec:
  replicas: 2
  selector:
    matchLabels:
      app: lanthir-services
  minReadySeconds: 60
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: lanthir-services
    spec:
      containers:
        - name: lanthir-services
          imagePullPolicy: Always
          image: lanthir-services:latest
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 5
          volumeMounts:
            - name: lanthir-services-config
              mountPath: /app/appsettings.local.json
              subPath: appsettings.json
      volumes:
        - name: lanthir-services-config
          configMap:
            name: lanthir-services-config
      imagePullSecrets:
        - name: academy-28ee1257-docker-registry
