Lunchproject/cicd/k8s/yml/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: lanthir-services-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - http:
        paths:
          - path: /sogyolunchapi
            backend:
              serviceName: lanthir-services-svc
              servicePort: 8080
          - path: /
            backend:
              serviceName: lanthir-client-svc
              servicePort: 8080
